objects/FSL__Scheduling_Policy_Work_Rule__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSL__Scheduling_Policy__c</fullName>
        <label>Scheduling Policy</label>
        <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
        <relationshipLabel>Scheduling Policy Work Rule</relationshipLabel>
        <relationshipName>Scheduling_Policy_Work_Rule</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FSL__Work_Rule__c</fullName>
        <label>Work Rule</label>
        <referenceTo>FSL__Work_Rule__c</referenceTo>
        <relationshipLabel>Scheduling Policy Work Rule</relationshipLabel>
        <relationshipName>Scheduling_Policy_Work_Rule</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Scheduling Policy Work Rule</label>
    <nameField>
        <label>Scheduling Policy Work Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduling Policy Work Rule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>